# OpenMSUtils

./: CLAUDE.md  Cargo.toml  MANIFEST.in  README.md  pyproject.toml  pyproject.toml.backup  setup.py
.claude/: settings.local.json
FastaUtils/: DecoyUtils.py  FastaReader.py  FastaWriter.py
OpenMSUtils/: __init__.py  _version.py
OpenMSUtils/AnalysisUtils/: FDRUtils.py  __init__.py
OpenMSUtils/FastaUtils/: __init__.py
OpenMSUtils/MolecularUtils/: DecoyUtils.py  ModificationUtils.py  NucleicAcidUtils.py  ProteinUtils.py  __init__.py
OpenMSUtils/MolecularUtils/accurate_molmass/: __init__.py  elements.py  elements_descriptions.py  enhanced_formula.py  molmass.py
OpenMSUtils/SpectraUtils/: IonMobilityUtils.py  MGFReader.py  MSObject.py  MSObject_Rust.py  MSReader.py  MZMLReader.py  MZMLUtils_Rust.py  SpectraBinUtils.py  SpectraConverter.py  SpectraPlotter.py  SpectraSearchUtils.py  SpectrumPlotter.py  XICSExtractor.py  __init__.py
OpenMSUtils/SpectraUtils/MGFUtils/: MGFObject.py  MGFReader.py  MGFWriter.py  __init__.py
OpenMSUtils/SpectraUtils/MSFileUtils/: MSFileObject.py  MSFileReader.py  MSFileWriter.py  __init__.py
OpenMSUtils/SpectraUtils/MZMLUtils/: MZMLObject.py  MZMLReader.py  MZMLWriter.py  MetaData.py  ParamObject.py  __init__.py
SpectraUtils/: MGFReader.py  MSObject.py  MSReader.py  MZMLReader.py  SpectrumPlotter.py  __init__.py
docs/: BENCHMARK_RESULTS.md  INSTALLATION.md  INTEGRATION_SUCCESS_REPORT.md  OBJECT_CONVERSION_REPORT.md  PRECOMPILED_DISTRIBUTION.md  spectrautils_rust_rewrite.md
src/: lib.rs  test_module.rs
src/conversion/: converter.rs  encoding.rs  mod.rs
src/core/: mod.rs  ms_object.rs  spectrum.rs  test_spectrum.rs  types.rs
src/ion_mobility/: merger.rs  mod.rs  parser.rs
src/parsers/: common.rs  mod.rs
src/parsers/mzml/: mod.rs  parser.rs  reader.rs  spectrum.rs
src/search/: binned_index.rs  mod.rs  parallel_search.rs  range_query.rs
src/utils/: helpers.rs  mod.rs
src/xic/: extractor.rs  mod.rs  result.rs  simd_search.rs
test/: benchmark_python_rust.py  benchmark_report.py  conversion_test.py  ims_conversion_test.py  memory_benchmark.py  object_conversion_benchmark.py  object_conversion_simple.py  rust_status.py  simple_benchmark.py  test_rust_integration.py
