[build-system]
requires = ["maturin>=1.0,<2.0", "setuptools", "wheel"]
build-backend = "maturin"

[project]
name = "OpenMSUtils"
version = "2.0.0"
description = "High-performance mass spectrometry data processing library with Rust backend"
readme = "README.md"
keywords = [
    "mass-spectrometry",
    "mzml",
    "bioinformatics",
    "performance",
    "rust",
    "proteomics",
    "metabolomics",
    "ms-data",
]
license = {text = "MIT License"}
maintainers = [
    {name = "OpenMSUtils Team", email = "ycliao@zju.edu.cn"},
]
authors = [
    {name = "OpenMSUtils Team", email = "ycliao@zju.edu.cn"},
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "numpy>=1.19.0",
    "lxml>=4.5.0",
    "matplotlib>=3.3.0",
    "pandas>=1.2.0",
]
[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/OpenMSUtils/OpenMSUtils"
Documentation = "https://OpenMSUtils.readthedocs.io"
Repository = "https://github.com/OpenMSUtils/OpenMSUtils"
"Bug Tracker" = "https://github.com/OpenMSUtils/OpenMSUtils/issues"

[tool.maturin]
module-name = "_openms_utils_rust._openms_utils_rust"
features = ["pyo3/extension-module"]
rust-crate = "crate"
python-source = "OpenMSUtils"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov"
testpaths = ["tests", "python/tests"]
